Bug 492218 - Spectrum Analyzer not working
Summary: Spectrum Analyzer not working
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Spectrum Analyzer (other bugs)
Version First Reported In: 2.9.71
Platform: Neon Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-26 15:05 UTC by Walter Kargus
Modified: 2025-06-23 17:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Walter Kargus 2024-08-26 15:05:21 UTC
SUMMARY
Even though the analyzer is open the spectrum does not move while the music is playing. 

STEPS TO REPRODUCE
1.  Configure the applet so that the analyzer is showing.
2.  Add a song to the playlist
3.  Play the song

OBSERVED RESULT
The spectrum does NOT move or follow the music while playing a song. 

EXPECTED RESULT
The spectrum should move and follows the music.

SOFTWARE/OS VERSIONS

As reported by Amarok
Amarok
Version 3.1.0
Using KDE Frameworks 5.116.0

As reported by About the System in System Settings.
Operating System: KDE neon 6.0
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.8.0-40-generic (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6820HQ CPU @ 2.70GHz
Memory: 15.3 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 530
Manufacturer: Dell Inc.
Product Name: Precision 7510
Comment 1 Tuomas Nurmi 2024-08-26 17:46:31 UTC
Unfortunately caused by missing functionality in phonon-vlc backend: https://bugs.kde.org/show_bug.cgi?id=320215
Would work with phonon-gstreamer; however, phonon-gstreamer backend is in unmaintained state, so cannot be recommended as an alternative. Also somewhat related to equalizer problems with phonon-vlc: https://bugs.kde.org/show_bug.cgi?id=486342

Fixing this (& some other similar bugs) will need either a load of work on phonon-vlc, (someone taking up maintaining phonon-gstreamer or) changing the Amarok playback system to use something else than Phonon. Hopefully one of those will happen at some point not in too distant future.
Comment 2 Walter Kargus 2024-08-26 18:10:31 UTC
I understand.  Since, Amarok is now being worked on again, I wanted to point this out.  I know Strawberry does it, but it is too small for my liking and thought it would be a simple fix.
Comment 3 Tuomas Nurmi 2024-08-28 20:17:09 UTC
(In reply to Walter Kargus from comment #2)
> I understand.  Since, Amarok is now being worked on again, I wanted to point
> this out.  I know Strawberry does it, but it is too small for my liking and
> thought it would be a simple fix.

Yes, it is good to have a bug report on this, thank you for filing! Even though the bug might look obvious, now it is tracked, and additionally someone else wondering the same might find this report and get some background information here. Unfortunately not a simple fix, but definitely something I will spend some time on after Qt6 port is done.
Comment 4 Tuomas Nurmi 2025-06-23 17:42:54 UTC
Git commit 13a6e3d0ed9da970f21a3a8092ce1eb27f9509ed by Tuomas Nurmi.
Committed on 23/06/2025 at 17:28.
Pushed by nurmi into branch 'master'.

Implement analyzer for the new gstreamer backend

M  +1    -1    src/EngineController.cpp
M  +208  -10   src/EngineGstPipeline.cpp
M  +15   -0    src/EngineGstPipeline.h
M  +2    -2    src/context/applets/analyzer/plugin/AnalyzerBase.cpp

https://invent.kde.org/multimedia/amarok/-/commit/13a6e3d0ed9da970f21a3a8092ce1eb27f9509ed