Implement analyzer for the new gstreamer backend

BUG: 492218