src/EngineController.cpp
@@ -144,7 +144,7 @@ EngineController::initializeBackend()
 
         m_seekablePipeline = m_pipeline->isSeekable();
         m_equalizerController->setEqElement( m_pipeline->eqElement() );
-        //connect( m_audioDataOutput.data(), &AudioDataOutput::dataReady, this, &EngineController::audioDataReady ); //TODO analyzer
+        connect( m_pipeline, &EngineGstPipeline::analyzerDataReady, this, &EngineController::audioDataReady );
     }
 
     if( m_currentTrack )
